memory-cost added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <tbody>
                           <tr>
                             <td class="fw-bold">Best Price</td>
-                            <td class="fw-bold">$1299</td>
+                            <td class="fw-bold">$<span id="best-price">1299</span></td>
                           </tr>
                           <tr>
                             <td class="fw-bold">Extra Memory Cost</td>
@@ -68,7 +68,7 @@
                           </tr>
                           <tr>
                             <td class="fw-bold">Total Price</td>
-                            <td class="fw-bold">$1299</td>
+                            <td class="fw-bold">$<span id="total">1299</span></td>
                           </tr>
                         </tbody>
                       </table>
